C/Bloco2/bloco2/b2_04/PreffixCalculator.g4
grammar PreffixCalculator;
program:
        stat * EOF
    ;
stat:
        expr ? NEWLINE
    ;
expr:
    op=('*'|'/'|'+'|'-') expr expr      #ExprSuffix
    | Number                            #ExprNumber
    ;
Number: [0-9]+('.'[0-9]+)?;
NEWLINE: '\r'? '\n';
WS: [ \t]+ -> skip;
